--- a/documentation/api/api.yaml
+++ b/documentation/api/api.yaml
@@ -318,6 +318,9 @@ paths:
           description: Optional. ISO date (YYYY-MM-DD) or version tag. Returns latest if omitted.
           schema:
             type: string
+          oneOf:
+            - pattern: "^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])$"
+            - enum: ["latest"]
       responses:
         '200':
           description: Success. The authorization package file is returned.
